--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>weeb</title>
+  <link rel="stylesheet" type="text/css" href="css/common.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 
