Lazy fix for video not displaying

--- a/static/index.html
+++ b/static/index.html
@@ -47,8 +47,8 @@
 
   <div id="content">
     <canvas id="model"></canvas>
-    <video id="camera" style="display: none;" playsinline autoplay muted></video>
-    <div id="camera">
+    <div id="camera-container">
+      <video id="camera" playsinline autoplay muted></video>
       <canvas id="webcam"></canvas>
       <canvas id="overlay"></canvas>
       <canvas id="overlay2"></canvas>
