--- a/static/ml5/index.html
+++ b/static/ml5/index.html
@@ -16,6 +16,7 @@
             position: relative;
         }
 
+        #webcam,
         #overlay {
             position: absolute;
             top: 0;
@@ -33,8 +34,8 @@
 </head>
 
 <body>
-    <video id="camera" style="display: none;" playsinline autoplay muted></video>
     <div id="video">
+        <video id="camera" playsinline autoplay muted></video>
         <canvas id="webcam"></canvas>
         <canvas id="overlay"></canvas>
     </div>
@@ -76,7 +77,7 @@
         <p id="left-info"></p>
     </div>
 
-    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
+    <script src="https://unpkg.com/ml5@0.5.0/dist/ml5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.3.0/jszip.min.js"></script>
     <script src="https://unpkg.com/file-saver@2.0.2/dist/FileSaver.min.js"></script>
     <script src="../js/util.js"></script>
@@ -209,11 +210,11 @@
 
                 mesh.forEach(point => drawPoint(overlayCtx, point[0], point[1], 1.5, "#36f"));
 
-                const rightEyeImg = clipEyeImage(ctx, mesh, 27, 23, 130, 244);
+                const rightEyeImg = clipEyeImage(ctx, mesh, 159, 145, 33, 133);
                 linkSize(rightEyeCanvas, rightEyeImg);
                 rightEyeCtx.putImageData(rightEyeImg, 0, 0);
 
-                const leftEyeImg = clipEyeImage(ctx, mesh, 257, 253, 464, 359);
+                const leftEyeImg = clipEyeImage(ctx, mesh, 386, 374, 362, 263);
                 const tempCanvas = document.createElement("canvas");
                 const tempCtx = tempCanvas.getContext("2d");
                 linkSizes([leftEyeCanvas, tempCanvas], leftEyeImg);
